<?xml version="1.0" encoding="utf-8"?>
<com.mxn.soul.flowingdrawer_core.FlowingDrawer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:edMenuBackground="#dddddd"
    app:edMenuSize="260dp"
    app:edPosition="1">

    <!--content-->
    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:background="@drawable/back_main"
        android:layout_height="match_parent"
        android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal"
                        android:id="@+id/up">

                        <LinearLayout
                            android:id="@+id/lefttop"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="0dp"
                                    android:layout_height="150dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/ateet" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:fontFamily="@font/nota_sans"
                                android:text="@string/contact1"
                                android:onClick="callateet"
                                android:textColor="#ffffff" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/righttop"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">

                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:layout_width="0dp"
                                    android:layout_height="150dp"
                                    android:layout_weight="1"
                                    android:src="@drawable/prabhat" />
                            </LinearLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:fontFamily="@font/nota_sans"
                                android:text="@string/contact2"
                                android:onClick="callprabhat"
                                android:textColor="#ffffff" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_below="@id/up"
                        android:layout_alignParentRight="true"
                        android:layout_above="@id/address"
                        android:layout_alignParentLeft="true">
                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textSize="16sp"
                            android:fontFamily="@font/nota_sans"
                            android:textColor="#ffffff"
                            android:layout_marginBottom="8dp"
                            android:onClick="sendmail" />
                        <TextView

                            android:layout_below="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nota_sans"
                            android:textSize="16sp"
                            android:text="Web: vivacity.lnmiit.ac.in"
                            android:textColor="#ffffff"
                            android:onClick="openweb"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentBottom="true">

                        <TextView
                            android:layout_width="0dp"
                            android:fontFamily="@font/nota_sans"
                            android:layout_height="wrap_content"
                            android:text="@string/Address"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="5"
                            android:textColor="#ffffff"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:layout_height="60dp"
                            android:src="@drawable/map"
                            android:onClick="openmap"/>

                    </LinearLayout>
                </RelativeLayout>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/toolbar"
                layout="@layout/view_feed_toolbar" />
        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>


    <!--menu-->
    <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
        android:id="@+id/menulayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/id_container_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>

</com.mxn.soul.flowingdrawer_core.FlowingDrawer>